@@ -29,6 +29,8 @@ Avro 1.7.0 (unreleased)
 
     AVRO-1085. Fingerprinting for C#. (Eric Hauser via thiru)
 
+    AVRO-1079. C++ Generator, improve include guard generation. (thiru)
+
   BUG FIXES
 
     AVRO-1045. Java: Fix a bug in GenericData#deepCopy() of ByteBuffer values.
